--- a/styleguide/scss/styles/_styles-initialize.scss
+++ b/styleguide/scss/styles/_styles-initialize.scss
@@ -30,42 +30,42 @@ html {
     --sf-font-weight: var(--sf-zero-font-weight);
     --sf-line-height: var(--sf-zero-line-height);
     
-    @include sf-media($from: phablet) {
+    @include sf-media($from: phab) {
 
         --sf-font-size: var(--sf-phab-font-size);
         --sf-font-weight: var(--sf-phab-font-weight);
         --sf-line-height: var(--sf-phab-line-height);
     }
 
-    @include sf-media($from: tablet-portrait) {
+    @include sf-media($from: tabp) {
 
         --sf-font-size: var(--sf-tabp-font-size);
         --sf-font-weight: var(--sf-tabp-font-weight);
         --sf-line-height: var(--sf-tabp-line-height);
     }
 
-    @include sf-media($from: tablet-landscape) {
+    @include sf-media($from: tabl) {
 
         --sf-font-size: var(--sf-tabl-font-size);
         --sf-font-weight: var(--sf-tabl-font-weight);
         --sf-line-height: var(--sf-tabl-line-height);
     }
 
-    @include sf-media($from: notebook) {
+    @include sf-media($from: note) {
 
         --sf-font-size: var(--sf-note-font-size);
         --sf-font-weight: var(--sf-note-font-weight);
         --sf-line-height: var(--sf-note-line-height);
     }
 
-    @include sf-media($from: desktop) {
+    @include sf-media($from: desk) {
 
         --sf-font-size: var(--sf-desk-font-size);
         --sf-font-weight: var(--sf-desk-font-weight);
         --sf-line-height: var(--sf-desk-line-height);
     }
 
-    @include sf-media($from: elastic) {
+    @include sf-media($from: elas) {
 
         --sf-font-size: var(--sf-elas-font-size);
         --sf-font-weight: var(--sf-elas-font-weight);
@@ -118,42 +118,42 @@ html {
                 margin-bottom: 1rem;
             }
             
-            @include sf-media($from: phablet) {
+            @include sf-media($from: phab) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-phab-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-phab-#{"h" + $i}-font-weight);
                 --sf-#{"h" + $i}-line-height: var(--sf-phab-#{"h" + $i}-line-height);
             }
 
-            @include sf-media($from: tablet-portrait) {
+            @include sf-media($from: tabp) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-tabp-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-tabp-#{"h" + $i}-font-weight);
                 --sf-#{"h" + $i}-line-height: var(--sf-tabp-#{"h" + $i}-line-height);
             }
 
-            @include sf-media($from: tablet-landscape) {
+            @include sf-media($from: tabl) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-tabl-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-tabl-#{"h" + $i}-font-weight);
                 --sf-#{"h" + $i}-line-height: var(--sf-tabl-#{"h" + $i}-line-height);
             }
 
-            @include sf-media($from: notebook) {
+            @include sf-media($from: note) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-note-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-note-#{"h" + $i}-font-weight);
                 --sf-#{"h" + $i}-line-height: var(--sf-note-#{"h" + $i}-line-height);
             }
 
-            @include sf-media($from: desktop) {
+            @include sf-media($from: desk) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-desk-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-desk-#{"h" + $i}-font-weight);
                 --sf-#{"h" + $i}-line-height: var(--sf-desk-#{"h" + $i}-line-height);
             }
 
-            @include sf-media($from: elastic) {
+            @include sf-media($from: elas) {
 
                 --sf-#{"h" + $i}-font-size: var(--sf-elas-#{"h" + $i}-font-size);
                 --sf-#{"h" + $i}-font-weight: var(--sf-elas-#{"h" + $i}-font-weight);
