--- a/styleguide/scss/_config-media-breakpoints.scss
+++ b/styleguide/scss/_config-media-breakpoints.scss
@@ -4,45 +4,44 @@
 
 // REQUIRED: Breakpoints; uses px units. Ensure that font sizes are set 
 // for active breakpoints in the typography configuration.
-// Breakpoint name: (width, abbreviation)
 $media-breakpoints: (
 
     // REQUIRED: Used internally to streamline detection of mobile first styles.
-    zero:  (0px, zero), 
+    zero: 0px, 
 
     // REQUIRED: Set the screen width for which a phablet experience begins.
     // Standard value is 400px.
-    phablet:  (400px, phab), 
+    phab: 400px, 
     
     // REQUIRED: Set the screen width for which a portrait tablet experience begins.
     // Standard value is 540px.
-    tablet-portrait:  (540px, tabp),
+    tabp: 540px,
 
     // REQUIRED: Set the screen width for which a landscape tablet experience begins.
     // Standard value is 800px.
-    tablet-landscape: (800px, tabl),
+    tabl: 800px,
 
     // REQUIRED: Set the screen width for which a notebook-sized experience begins.
     // Standard value is 1152px.
-    notebook: (1152px, note),
+    note: 1152px,
 
     // REQUIRED: Set the screen width for which a desktop-sized experience begins.
     // Standard value is 1280px.
-    desktop: (1280px, desk),
+    desk: 1280px,
     
-    // REQUIRED: Page content will stop growing at this width.
+    // REQUIRED: Page content will stop growing at this (elastic) width.
     // Standard value is 1440px.
-    elastic: (1440px, elas)
+    elas: 1440px
 );
 
 // REQUIRED: breakpoint variables
-$zero-breakpoint: nth(map-get($media-breakpoints, "zero"), 1);
-$phablet-breakpoint: nth(map-get($media-breakpoints, "phablet"), 1);
-$tablet-portrait-breakpoint: nth(map-get($media-breakpoints, "tablet-portrait"), 1);
-$tablet-landscape-breakpoint: nth(map-get($media-breakpoints, "tablet-landscape"), 1);
-$notebook-breakpoint: nth(map-get($media-breakpoints, "notebook"), 1);
-$desktop-breakpoint: nth(map-get($media-breakpoints, "desktop"), 1);
-$elastic-breakpoint: nth(map-get($media-breakpoints, "elastic"), 1);
+$zero-breakpoint: map-get($media-breakpoints, "zero");
+$phab-breakpoint: map-get($media-breakpoints, "phab");
+$tabp-breakpoint: map-get($media-breakpoints, "tabp");
+$tabl-breakpoint: map-get($media-breakpoints, "tabl");
+$note-breakpoint: map-get($media-breakpoints, "note");
+$desk-breakpoint: map-get($media-breakpoints, "desk");
+$elas-breakpoint: map-get($media-breakpoints, "elas");
 
 // REQUIRED: Maximum number of table columns to support.
 // Used by some mixins to generate table styles.
