--- a/styleguide/scss/_manifest.scss
+++ b/styleguide/scss/_manifest.scss
@@ -3,22 +3,31 @@
  * Documented with the Nucleus style guide syntax: https://holidaypirates.github.io/nucleus/annotation-reference.html
  */
 
-// CORE HELPER PARTIALS; DO NOT EDIT
+// CORE MIXINS AND FUNCTIONS; DO NOT EDIT
 @import "core/core";
-@import "config";
-@import "vendor/normalize";
-@import "core/core-media-queries";
-@import "core/core-helpers";
-@import "core/core-initialize";
-@import "core/core-css-grid";
-
-// CORE ELEMENT PARTIALS; DO NOT EDIT
 @import "core/core-animation";
-@import "core/core-buttons";
-@import "core/core-forms";
-@import "core/core-lists-and-tables";
-@import "core/core-typography";
-@import "core/core-media";
 
-// CORE LAYOUT; DO NOT EDIT
+// BASE CONFIGURATION; DO NOT EDIT
+@import "config";
+
+// CORE MIXINS AND FUNCTIONS; DO NOT EDIT
 @import "core/core-layout";
+@import "core/core-color";
+@import "core/core-forms";
+@import "core/core-media-queries";
+@import "core/core-grid";
+@import "core/core-media";
+@import "core/core-tables";
+
+// CORE BASE STYLES; DO NOT EDIT
+@import "styles/styles-reset";
+@import "styles/styles-initialize";
+@import "styles/styles-buttons";
+@import "styles/styles-forms";
+@import "styles/styles-blocks";
+@import "styles/styles-layout";
+@import "styles/styles-lists";
+@import "styles/styles-media";
+@import "styles/styles-tables";
+@import "styles/styles-typography";
+
