--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -1,249 +1,50 @@
-//-----------------------------------------------------------------------//
-// $LAYOUT
-// Mixins, functions, and styles for working with units and grids.
-//-----------------------------------------------------------------------//
+/**
+ * @nuclide Hide
+ * @section Mixins > Styles
+ * @modifiers
+ *  sf-hide() - Hide and element from everything based on media breakpoints using `display: none`.
+ * @markup
+ *  @include sf-hide($from: tabp);
+ *  @include sf-hide($upto: tabp);
+ */
+@mixin sf-hide (
+    $from:false, 
+    $upto:false) {
 
-html, body {
+    $frombreakpoint: $from;
+    $uptobreakpoint: $upto;
 
-    // Needed for mobile
-    overflow-x: hidden;
-    max-width: 100vw;
-}
+    @include sf-media($from: $frombreakpoint, $upto: $uptobreakpoint) {
 
-body {
-
-    // Needed for mobile
-    position: relative;
-
-    [sf-elastic-wrapper] {
-
-        @if (nth(map-get($media-breakpoints, elastic), 1) != false) {
-
-            max-width: $elastic-breakpoint;
-        }
-
-        margin-left: auto;
-        margin-right: auto;
+        display: none;
     }
 }
 
-@each $breakpoint, $props in $media-breakpoints {
+/**
+ * @nuclide Visually Hide
+ * @section Mixins > Styles
+ * @modifiers
+ *  sf-visually-hide() - Visually hide an element without using `display: none`.
+ * @markup
+ *  @include sf-visually-hide($from: tabp);
+ *  @include sf-visually-hide($upto: tabp);
+ */
+@mixin sf-visually-hide (
+    $from:false, 
+    $upto:false) {
 
-    @if (nth($props, 1) != false) {
+    $frombreakpoint: $from;
+    $uptobreakpoint: $upto;
 
-        @if ($breakpoint == zero) {
+    @include sf-media($from: $frombreakpoint, $upto: $uptobreakpoint) {
 
-            [sf-hide] {
-
-                display: none !important;
-            } 
-
-        } @else {
-
-            @include sf-media($from: $breakpoint) {
-
-                [sf-hide-#{nth($props, 2)}-and-up] {
-
-                    display: none !important;
-                } 
-            }
-
-            @include sf-media($upto: $breakpoint) {
-
-                [sf-hide-below-#{nth($props, 2)}] {
-
-                    display: none !important;
-                } 
-            }
-        }
-    }
-}
-
-// UNIT STYLING
-// These are the outer block containers that you stack to create your UI.
-
-// <main>
-//     <section id="hero-unit" sf-unit>
-//         <div sf-outer-wrapper>
-//             <div sf-inner-wrapper>
-//                 ...
-//                 <div sf-subunit>
-//                     ...
-//                 </div>
-//                 ...
-//             </div>
-//         </div>
-//     </div>
-//     <section id="feature-unit" sf-unit>
-//         <div sf-outer-wrapper>
-//             <div sf-inner-wrapper>
-//                 ...
-//             </div>
-//         </div>
-//     </div>
-//     ...
-
-* {
-
-    & > [sf-unit], &[sf-unit] {
-
-        @include set-bottom-unit-padding();
-
-        & > [sf-outer-wrapper] {
-
-            margin-left: auto;
-            margin-right: auto;
-
-            @if (nth(map-get($media-breakpoints, elastic), 1) != false) {
-
-                max-width: $elastic-breakpoint;
-            }
-
-            @include set-horizontal-unit-padding();
-
-            & > [sf-inner-wrapper] {
-
-                @include set-top-unit-padding();
-
-                & > *:not([role="grid"]) {
-
-                    &:first-child {
-
-                        margin-top: 0;
-                    }
-                }
-            }
-        }
-    }
-
-    [sf-subunit] {
-
-        @include set-bottom-subunit-margin();
-
-        &:last-child {
-
-            margin-bottom: 0;
-        }
-    }
-
-    // SF-SCROLL-WRAPPER
-    // Allows wide content to scroll horizontally on mobile.
-
-    // <div sf-scrollable>
-    //   <div sf-scrollable-inner>
-    //      <div sf-scrollable-content>
-    //          <table>
-    //              ...
-    //          </table>
-    //      </div>
-    //   </div>
-    // </div>
-
-    [sf-scrollable] {
-
-        position: relative;
-        display: grid;
-    
-        & > div:nth-of-type(2) {
-    
-            padding-top: 0.5rem;
-            padding-bottom: 0.5rem;
-            text-align: right;
-            color: rgba(0, 0, 0, 0.25);
-            font-size: 0.8rem;
-            line-height: 1;
-    
-            i.fa-long-arrow-left {
-    
-                font-size: 0.6rem;
-                line-height: 1;
-            }
-    
-            @include sf-media($upto: tablet-portrait) {
-    
-                padding-right: var(--horizontal-unit-padding);
-            }
-    
-            @include sf-media($from: phablet, $upto: tablet-portrait) {
-    
-                padding-right: var(--phablet-horizontal-unit-padding);
-            }
-        }
-    
-        @include sf-media($upto: tablet-portrait) {
-    
-            margin-left: calc(var(--horizontal-unit-padding) * -1);
-            margin-right: calc(var(--horizontal-unit-padding) * -1);
-        }
-    
-        @include sf-media($from: phablet, $upto: tablet-portrait) {
-    
-            margin-left: calc(var(--phablet-horizontal-unit-padding) * -1);
-            margin-right: calc(var(--phablet-horizontal-unit-padding) * -1);
-        }
-    
-        @include sf-media($from: tablet-portrait) {
-    
-            & > div:nth-of-type(2) {
-    
-                display: none;
-            }
-        }
-    
-        & > [sf-scrollable-inner] {
-    
-            position: relative;
-            display: block;
-    
-            @include sf-media($upto: tablet-portrait) {
-    
-                margin-right: calc(var(--horizontal-unit-padding) * -1);
-            }
-    
-            @include sf-media($from: phablet, $upto: tablet-portrait) {
-    
-                margin-right: calc(var(--phablet-horizontal-unit-padding) * -1);
-            }
-    
-            @include sf-media($from: tablet-portrait) {
-    
-                border-radius: var(--border-radius);
-            }
-    
-            overflow: scroll;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-    
-            &::-webkit-scrollbar {
-    
-                display: none;
-            }
-    
-            & > [sf-scrollable-content] {
-    
-                display: block;
-                position: relative;
-                min-width: 100%;
-                width: 100%;
-                width: max-content;
-                width: -webkit-max-content;
-    
-                @include sf-media($upto: tablet-portrait) {
-    
-                    padding-left: var(--horizontal-unit-padding);
-                    padding-right: var(--horizontal-unit-padding);
-                }
-            }
-        }
-    }
-    
-    [sf-scrollable] + p {
-    
-        margin-top: var(--paragraph-bottom-margin);
-    
-        &[sf-tight] {
-    
-            margin-top: var(--paragraph-bottom-margin)/3;
-        }
+        border: 0;
+        clip: rect(0 0 0 0);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
     }
 }
