--- a/styleguide/scss/core/_core-media.scss
+++ b/styleguide/scss/core/_core-media.scss
@@ -1,14 +1,13 @@
-//-----------------------------------------------------------------------//
-// $MEDIA
-// Mixins, functions, and styles for working with media.
-//-----------------------------------------------------------------------//
-
-
-//-----------------------------------------------------------------------//
-// MIXINS AND FUNCTIONS
-//-----------------------------------------------------------------------//
-
-// Responsive video container
+/**
+ * @nuclide Responsive Video Container
+ * @section Functions > Media
+ * @modifiers
+ *  sf-video-container{} - Responsive video container
+ * @markup
+ *  .video-container {
+ *    @include sf-video-container();
+ *  }
+ */
 @mixin sf-video-container {
 
     position: relative;
@@ -24,123 +23,5 @@
         left: 0;
         width: 100%;
         height: 100%;
-    }
-}
-
-
-//-----------------------------------------------------------------------//
-// STYLES
-//-----------------------------------------------------------------------//
-
-// Remove gap between elements and the bottom of their containers
-audio,
-canvas,
-img,
-svg,
-video {
-
-    vertical-align: middle;
-}
-
-// Fluid images
-img, object, svg {
-
-    position: relative;
-    width: 100%;
-    max-width: 100%;
-    -ms-interpolation-mode: bicubic;
-}
-
-svg {
-
-    height: auto;
-}
-
-// Non-fluid images if you specify `width` and/or `height` attributes
-object[width],
-object[height],
-img[width],
-img[height] {
-
-    width: auto;
-    max-width: none;
-}
-
-span[role="img"], span[role="icon"] {
-
-    display: inline-block;
-    line-height: 0;
-}
-
-object[type="image/svg+xml"] {
-
-    display: inline-block;
-    line-height: 0;
-    pointer-events: none;
-}
-
-[sf-image-wrapper] {
-
-    @include sf-media($upto: tablet-portrait) {
-
-        margin-left: calc(var(--horizontal-unit-padding) * -1);
-        margin-right: calc(var(--horizontal-unit-padding) * -1);
-
-        img {
-
-            max-width: 100vw;
-            width: 100vw;
-        }
-    }
-
-    small {
-
-        display: block;
-        margin-top: 0.75rem;
-
-        @include sf-media($upto: tablet-portrait) {
-
-            margin-left: var(--horizontal-unit-padding);
-            margin-right: var(--horizontal-unit-padding);
-        }
-    }
-}
-
-
-//-----------------------------------------------------------------------//
-// VIDEO
-//-----------------------------------------------------------------------//
-
-[sf-video-wrapper] {
-
-    @include sf-media($upto: tablet-portrait) {
-
-        margin-left: calc(var(--horizontal-unit-padding) * -1);
-        margin-right: calc(var(--horizontal-unit-padding) * -1);
-    }
-
-    [role="video"], video {
-
-        background-color: var(--sf-color-light);
-
-        @include sf-media($from: tablet-portrait) {
-
-            border-radius: 0.25rem;
-            overflow: hidden;
-        }
-
-        @include sf-video-container;
-    }
-
-    small {
-
-        display: block;
-        margin-top: 0.75rem;
-
-        @include sf-media($upto: tablet-portrait) {
-
-            margin-left: var(--horizontal-unit-padding);
-            margin-right: var(--horizontal-unit-padding);
-        }
     }
 }
