--- a/styleguide/scss/custom/_layout-footer.scss
+++ b/styleguide/scss/custom/_layout-footer.scss
@@ -11,7 +11,7 @@ body {
 
         padding-bottom: 8rem;
 
-        @include sf-media($from: tablet-portrait) {
+        @include sf-media($from: tabp) {
 
             padding-bottom: 3rem;
 
@@ -28,7 +28,7 @@ body {
 
             margin-bottom: 0.75rem;
 
-            @include sf-media($from: tablet-portrait) {
+            @include sf-media($from: tabp) {
 
                 margin-bottom: 0.75rem;
             }
@@ -39,11 +39,11 @@ body {
             }
         }
 
-        @include sf-media($from: tablet-portrait) {
+        @include sf-media($from: tabp) {
 
             font-size: 0.8rem;
 
-            [role="gridcell"] {
+            [sf-grid-cell] {
 
                 &:nth-child(1) {
 
