--- a/styleguide/scss/custom/_typography.scss
+++ b/styleguide/scss/custom/_typography.scss
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 
         padding-right: 0.5rem;
 
-        @include sf-media($from: tablet-portrait) {
+        @include sf-media($from: tabp) {
 
             padding-right: 0.5rem;
         }
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
         vertical-align: text-top;
         left: -0.5rem;
 
-        @include sf-media($upto: tablet-portrait) {
+        @include sf-media($upto: tabp) {
 
             display: block;
             width: 100%;
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 
             &.except-mobile {
 
-                @include sf-media($upto: tablet-portrait) {
+                @include sf-media($upto: tabp) {
 
                     white-space: initial;
                 }
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 
             white-space: initial;
 
-            @include sf-media($from: tablet-portrait) {
+            @include sf-media($from: tabp) {
 
                 white-space: nowrap;
             }
@@ -107,7 +107,7 @@ hr {
 
 h1 {
 
-    @include sf-media($upto: tablet-portrait) {
+    @include sf-media($upto: tabp) {
 
         text-align: center;
     }
