--- a/styleguide/scss/styles/_styles-typography.scss
+++ b/styleguide/scss/styles/_styles-typography.scss
@@ -1,20 +1,3 @@
-//-----------------------------------------------------------------------//
-// $TYPOGRAPHY
-// Mixins and functions for working with typography.
-//-----------------------------------------------------------------------//
-
-
-//-----------------------------------------------------------------------//
-// MIXINS AND FUNCTIONS
-//-----------------------------------------------------------------------//
-
-// TBD
-
-
-//-----------------------------------------------------------------------//
-// STYLES
-//-----------------------------------------------------------------------//
-
 a {
 
     text-decoration: underline;
@@ -51,7 +34,7 @@ h3, h4, h5, h6 {
 
     margin-top: var(--headline-top-margin-stacked);
 
-    @include sf-media($from: tablet-portrait) {
+    @include sf-media($from: tabp) {
     
         margin-top: var(--headline-top-margin);
     }
@@ -95,7 +78,7 @@ blockquote {
     padding-right: 1.3344rem;
     font-style: italic;
 
-    @include sf-media($from: tablet-portrait) {
+    @include sf-media($from: tabp) {
     
         margin-left: 3.5rem;
         margin-right: 2.5rem;
@@ -116,7 +99,7 @@ blockquote {
         margin-top: 1.5rem;
         font-size: 85%;
 
-        @include sf-media($from: tablet-portrait) {
+        @include sf-media($from: tabp) {
 
             margin-top: 1.25rem;
         }
@@ -175,7 +158,7 @@ hr {
     border-bottom-width: 0.15rem;
     border-bottom-style: solid;
 
-    @include sf-media($from: tablet-portrait) {
+    @include sf-media($from: tabp) {
 
         height: 0.15rem;
         min-height: 0.15rem;
@@ -216,30 +199,30 @@ hr {
             line-height: 1;
         }
 
-        @include sf-media($upto: tablet-portrait) {
+        @include sf-media($upto: tabp) {
 
-            padding-right: var(--horizontal-unit-padding);
+            padding-right: var(--block-lr-padding);
         }
 
-        @include sf-media($from: phablet, $upto: tablet-portrait) {
+        @include sf-media($from: phab, $upto: tabp) {
 
-            padding-right: var(--phablet-horizontal-unit-padding);
+            padding-right: var(--phab-block-lr-padding);
         }
     }
 
-    @include sf-media($upto: tablet-portrait) {
+    @include sf-media($upto: tabp) {
 
-        margin-left: calc(var(--horizontal-unit-padding) * -1);
-        margin-right: calc(var(--horizontal-unit-padding) * -1);
+        margin-left: calc(var(--block-lr-padding) * -1);
+        margin-right: calc(var(--block-lr-padding) * -1);
     }
 
-    @include sf-media($from: phablet, $upto: tablet-portrait) {
+    @include sf-media($from: phab, $upto: tabp) {
 
-        margin-left: calc(var(--phablet-horizontal-unit-padding) * -1);
-        margin-right: calc(var(--phablet-horizontal-unit-padding) * -1);
+        margin-left: calc(var(--phab-block-lr-padding) * -1);
+        margin-right: calc(var(--phab-block-lr-padding) * -1);
     }
 
-    @include sf-media($from: tablet-portrait) {
+    @include sf-media($from: tabp) {
 
         & > div {
 
@@ -255,17 +238,17 @@ hr {
         background: var(--sf-color-code);
         color: var(--sf-color-code-contrast);
 
-        @include sf-media($upto: tablet-portrait) {
+        @include sf-media($upto: tabp) {
 
-            margin-right: calc(var(--horizontal-unit-padding) * -1);
+            margin-right: calc(var(--block-lr-padding) * -1);
         }
 
-        @include sf-media($from: phablet, $upto: tablet-portrait) {
+        @include sf-media($from: phab, $upto: tabp) {
 
-            margin-right: calc(var(--phablet-horizontal-unit-padding) * -1);
+            margin-right: calc(var(--phab-block-lr-padding) * -1);
         }
 
-        @include sf-media($from: tablet-portrait) {
+        @include sf-media($from: tabp) {
 
             border-radius: var(--border-radius);
         }
@@ -288,19 +271,19 @@ hr {
             width: max-content;
             width: -webkit-max-content;
 
-            @include sf-media($upto: tablet-portrait) {
+            @include sf-media($upto: tabp) {
 
-                padding-left: var(--horizontal-unit-padding / 2);
-                padding-right: calc(var(--horizontal-unit-padding) * 1);
+                padding-left: var(--block-lr-padding / 2);
+                padding-right: calc(var(--block-lr-padding) * 1);
             }
 
-            @include sf-media($from: phablet, $upto: tablet-portrait) {
+            @include sf-media($from: phab, $upto: tabp) {
 
-                padding-left: var(--phablet-horizontal-unit-padding / 2);
-                padding-right: calc(var(--phablet-horizontal-unit-padding) * 1);
+                padding-left: var(--phab-block-lr-padding / 2);
+                padding-right: calc(var(--phab-block-lr-padding) * 1);
             }
 
-            @include sf-media($from: tablet-portrait) {
+            @include sf-media($from: tabp) {
 
                 padding-left: 0.5rem;
                 padding-right: 0.5rem;
